--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "@types/node": "^12.20.29",
     "@types/react": "^17.0.29",
     "@types/react-dom": "^17.0.9",
+    "chart.js": "^3.6.0",
     "react": "^17.0.2",
+    "react-chartjs-2": "^3.3.0",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "typescript": "^4.4.4",
